--- a/Medipation2/src/index.html
+++ b/Medipation2/src/index.html
@@ -1,11 +1,14 @@
-<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Medipation2</title>
+  <title>Medipation</title>
   <base href="/">
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
+  <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
 </head>
 <body>
   <app-root></app-root>
